# bf-python-postgresql

./: LICENSE  README.md  pyproject.toml
src/bf_psycopg/: __init__.py  duplicate_detection.py  error.py  form.py  query.py  table.py  validator.py
tests/: test_form_data.py  test_table_info.py  test_validator.py  testconfig.py
