[project]
name = "bf-psycopg"
version = "0.0.1"
authors = [
  { name="Damien Bezborodov", email="dbezborodov@gmail.com" },
]
description = "Validation of HTML form data against a database using Psycopg 3 (B-Forms.)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg >= 3.1",
]
keywords = ["validation"]

[project.urls]
"Homepage" = "https://github.com/b-forms/bf-python-postgresql"
"Bug Tracker" = "https://github.com/b-forms/bf-python-postgresql/issues"
